@@ -1,6 +1,8 @@
 1999-08-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Selector.java (hashCode, equals): New methods.
+	(Selector): Allow duplicate methods to be found, but check
+	that the types are the same.
 
 1999-07-27  Vladimir Jojic  <vjojic@ute.santafe.edu>
 
